<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <MultiSelectListPreference
        android:defaultValue="@array/pref_station_list_values"
        android:entries="@array/pref_stations_list_titles"
        android:entryValues="@array/pref_station_list_values"
        android:key="stations_multi_list"
        android:summary="@string/pref_multi_list_summary"
        android:title="@string/pref_list_of_stations"/>


    <!--<SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />-->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!--<EditTextPreference
        android:capitalize="words"
        android:defaultValue=" "
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />-->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_check_change_in_data"
        />

    <EditTextPreference
        android:defaultValue="0"
        android:inputType="textNoSuggestions"
        android:key="api_key_edit"
        android:maxLines="1"
        android:singleLine="true"
        android:summary="@string/pref_edit_api_summary"
        android:title="@string/pref_edit_api_key"
        android:layout_height="wrap_content" />

   <!-- <EditTextPreference
        android:defaultValue="1"
        android:inputType="numberDecimal"
        android:key="graph_inactivity_zero"
        android:maxLines="1"
        android:singleLine="true"
        android:summary="@string/pref_graph_zeroing_summary"
        android:title="@string/pref_graph_zeroing"
        />-->

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_graph_zero_titles"
        android:entryValues="@array/pref_graph_zero_values"
        android:key="graph_zero_listpref"
        android:negativeButtonText="Cancel"
        android:positiveButtonText="Apply"
        android:summary="@string/pref_graph_zeroing_summary"
        android:title="@string/pref_graph_zeroing"
        />






</PreferenceScreen>
