<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorAccent"
        android:padding="16dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/exclamation_circle"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:text="@string/root_link_dialog_title"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"/>





    </LinearLayout>





    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/root_link_error_desc"/>





    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_edit_text_root_link"
        android:layout_marginTop="8dp"
        android:hint="@string/dialog_enter_root_link_prompt"
        android:inputType="text">

    </EditText>




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_root_link_settings_later"
        android:gravity="center"

        android:textStyle="italic"/>

</LinearLayout>
