<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="edu.strathmore.serc.sercopenenergymonitorv3.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_action_wrench_icon"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="edu.strathmore.serc.sercopenenergymonitorv3.SettingsActivity$GraphPreferenceFragment"
        android:icon="@drawable/ic_action_1492780722_12_seo_benchmark"
        android:title="@string/pref_header_graph" />

    <header
        android:fragment="edu.strathmore.serc.sercopenenergymonitorv3.SettingsActivity$AccountPreferenceFragment"
        android:icon="@drawable/ic_action_account_icon"
        android:title="@string/pref_header_account" />

   <!-- <header
        android:fragment="edu.strathmore.serc.sercopenenergymonitorv3.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="edu.strathmore.serc.sercopenenergymonitorv3.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />-->

</preference-headers>
